add dialyzer options

--- a/rebar.config
+++ b/rebar.config
@@ -1,1 +1,9 @@
 {erl_opts, [debug_info, warnings_as_errors]}.
+
+
+{dialyzer
+    ,[{warnings, [race_conditions
+                 ,no_return
+                 ,unmatched_returns]}
+     ,{plt_apps, top_level_deps}
+     ,{plt_prefix, "director"}]}.
