--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ otp_release:
   - 20.0
 
 
-env:
-  - TEST=1
 before_script:
     - kerl list installations
     - curl -O -L https://s3.amazonaws.com/rebar3/rebar3
@@ -14,7 +12,7 @@ before_script:
 
 script:
   - ./rebar3 ct
-#  - ./rebar3 dialyzer
+  - ./rebar3 dialyzer
 
 cache:
   directories:
