--- a/rebar.config
+++ b/rebar.config
@@ -2,8 +2,6 @@
 
 
 {dialyzer
-    ,[{warnings, [race_conditions
-                 ,no_return
-                 ,unmatched_returns]}
+    ,[{warnings, [race_conditions, no_return, unmatched_returns]}
      ,{plt_apps, top_level_deps}
      ,{plt_prefix, "director"}]}.
