Support OTP version 18.0 - 20.0.4

--- a/rebar.config
+++ b/rebar.config
@@ -5,3 +5,5 @@
     ,[{warnings, [race_conditions, no_return, unmatched_returns]}
      ,{plt_apps, top_level_deps}
      ,{plt_prefix, "director"}]}.
+
+{minimum_otp_vsn, "18"}.
