--- a/examples/ETS/Makefile
+++ b/examples/ETS/Makefile
@@ -6,20 +6,20 @@ LIB_PATH := $(BUILD_PATH)/default/lib
 all: compile shell
 
 deps:
-	@../../../rebar3 get-deps
+	@../../rebar3 get-deps
 
 compile: compile-director
-	@../../../rebar3 compile
+	@../../rebar3 compile
 
 compile-director:
-	@cd ../../../ && ./rebar3 compile
+	@cd ../../ && ./rebar3 compile
 
 shell: compile
 	@erl -pa $(LIB_PATH)/sample_ets/ebin \
-	         ../../../$(LIB_PATH)/director/ebin
+	         ../../$(LIB_PATH)/director/ebin
 
 clean:
-	@../../../rebar3 clean
+	@../../rebar3 clean
 
 distclean:
 	@rm -rf $(BUILD_PATH)
