--- a/examples/Mnesia/Makefile
+++ b/examples/Mnesia/Makefile
@@ -6,23 +6,23 @@ LIB_PATH := $(BUILD_PATH)/default/lib
 all: compile shell
 
 compile: compile-director
-	@../../../rebar3 compile
+	@../../rebar3 compile
 
 compile-director:
-	@cd ../../../ && ./rebar3 compile
+	@cd ../../ && ./rebar3 compile
 
 foo: compile
 	@erl -pa $(LIB_PATH)/sample_mnesia/ebin \
-	         ../../../$(LIB_PATH)/director/ebin \
+	         ../../$(LIB_PATH)/director/ebin \
 	     -sname foo
 
 bar: compile
 	@erl -pa $(LIB_PATH)/sample_mnesia/ebin \
-	         ../../../$(LIB_PATH)/director/ebin \
+	         ../../$(LIB_PATH)/director/ebin \
 	     -sname bar
 
 clean:
-	@../../../rebar3 clean
+	@../../rebar3 clean
 
 distclean:
 	@rm -rf $(BUILD_PATH)
