--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 
 
 {dialyzer
-    ,[{warnings, [race_conditions, no_return, unmatched_returns]}
+    ,[{warnings, [no_return]}
      ,{plt_apps, top_level_deps}
      ,{plt_prefix, "director"}]}.
 
