build(rebar.config): Add profile for generating markdown docs

--- a/rebar.config
+++ b/rebar.config
@@ -7,3 +7,6 @@
      ,{plt_prefix, "director"}]}.
 
 {minimum_otp_vsn, "18"}.
+
+
+{profiles, [{edown, [{deps, [edown]}, {edoc_opts, [{doclet, edown_doclet}]}]}]}.
