ci: add code coverage

--- a/rebar.config
+++ b/rebar.config
@@ -1,12 +1,14 @@
 {erl_opts, [debug_info, warnings_as_errors]}.
 
-
-{dialyzer
-    ,[{warnings, [no_return]}
-     ,{plt_apps, top_level_deps}
-     ,{plt_prefix, "director"}]}.
-
 {minimum_otp_vsn, "18"}.
 
+{profiles, [{doc, [{deps, [edown]}, {edoc_opts, [{doclet, edown_doclet}]}]}
+           ,{test, [{plugins, [coveralls]}
+                   ,{cover_enabled, true}
+                   ,{cover_export_enabled, true}
+                   ,{coveralls_coverdata, "_build/test/cover/ct.coverdata"}
+                   ,{dialyzer, [{warnings, [no_return]}
+                               ,{plt_apps, top_level_deps}
+                               ,{plt_prefix, "director"}]}]}]}.
 
-{profiles, [{edown, [{deps, [edown]}, {edoc_opts, [{doclet, edown_doclet}]}]}]}.
+%%{plugins, [rebar3_hex]}.
