--- a/rebar.config
+++ b/rebar.config
@@ -2,13 +2,10 @@
 
 {minimum_otp_vsn, "18"}.
 
-{profiles, [{doc, [{deps, [edown]}, {edoc_opts, [{doclet, edown_doclet}]}]}
-           ,{test, [{plugins, [coveralls]}
-                   ,{cover_enabled, true}
-                   ,{cover_export_enabled, true}
-                   ,{coveralls_coverdata, "_build/test/cover/ct.coverdata"}
-                   ,{dialyzer, [{warnings, [no_return]}
-                               ,{plt_apps, top_level_deps}
-                               ,{plt_prefix, "director"}]}]}]}.
+{profiles, [{doc, [{deps, [edown]}, {edoc_opts, [{doclet, edown_doclet}]}]}]}.
+
+{dialyzer, [{warnings, [no_return]}
+           ,{plt_apps, top_level_deps}
+           ,{plt_prefix, "director"}]}.
 
 %%{plugins, [rebar3_hex]}.
